# 42-A-Maze-ing

./: Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  display.py  maze.py  maze.txt  maze_gen.py  maze_output.py  mytest.py  pyproject.toml  requirement.txt
mazegen/: __init__.py  maze.py
mlx_CLXV/: mlx-2.2-py3-none-any.whl
typings/mlx/: __init__.pyi
