[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generation package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "gcabecas" },
  { name = "jsam" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
